# Sandboxed-Player

./: INSTALL  Makefile  README.rst  autogen.sh  configure.ac  decoder.c  gstsandboxeddecodebin.c  gstsandboxeddecodebin.h  player.c  safeplayer.c  sandboxed-player.c
plugins/: Makefile.am  gstsandboxeddecodebin.c  gstsandboxeddecodebinplugin.c
tools/: Makefile.am  gstdecoder.c  libsandbox.c  libsandbox.h
