plugin_LTLIBRARIES = libgstsandboxeddecodebin.la

# sources used to compile this plug-in
libgstsandboxeddecodebin_la_SOURCES = gstsandboxeddecodebinplugin.c gstsandboxeddecodebin.c gstsandboxeddecodebin.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstsandboxeddecodebin_la_CFLAGS = $(GST_CFLAGS)
libgstsandboxeddecodebin_la_LIBADD = $(GST_LIBS)
libgstsandboxeddecodebin_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstsandboxeddecodebin_la_LIBTOOLFLAGS = --tag=disable-static

